EXTRA_DIST=CMakeLists.txt					      \
	   ./README.md						      \
	   ./CHANGELOG.md					      \
	   ./favicon.ico					      \
	   ./404.html						      \
	   ./bibliography.bib					      \
	   ./svn.md					              \
	   ./faq.md					              \
	   ./interfaces.md					      \
	   ./devel.md					              \
	   ./index.md					              \
	   ./material-properties.md				      \
	   ./behaviours.md				              \
	   ./models.md				                      \
	   ./castem.md						      \
	   ./castem-fr.md					      \
	   ./epx.md						      \
	   ./aster.md						      \
	   ./abaqus.md						      \
	   ./ansys.md						      \
	   ./calculix.md					      \
	   ./zmat.md						      \
	   ./getting-started.md					      \
	   ./install.md						      \
	   ./install-windows-msys.md				      \
	   ./install-windows-Cast3M2017.md			      \
	   ./install-windows-VisualStudio.md			      \
	   ./packages.md					      \
	   ./about.md						      \
	   ./news.md						      \
	   ./mfront-template.html				      \
	   ./benchmark.md					      \
	   ./documentations.md					      \
	   ./gallery.md					              \
	   ./mfront-python.md					      \
	   ./mtest.md						      \
	   ./mtest-python.md					      \
	   ./tutorial.md					      \
	   ./tutorial-spanish.md				      \
	   ./LICENSE.md						      \
	   ./glossary.md					      \
	   ./parameters.md					      \
	   ./publications.md					      \
	   ./CONTRIBUTING.md					      \
	   ./release-notes.md					      \
	   ./release-notes-2.0.5.md				      \
	   ./release-notes-3.0.md				      \
	   ./release-notes-3.0.1.md				      \
	   ./release-notes-3.0.2.md				      \
	   ./release-notes-3.1.md				      \
	   ./hyperelasticity.md				              \
	   ./signorini.md				              \
	   ./ogden.md				                      \
	   ./hyperviscoelasticity.md				      \
	   ./orthotropiclinearhardeningplasticity.md                  \
	   ./isotropicplasticityamstrongfrederickinematichardening.md \
	   ./iwan.md                                                  \
	   ./ddif2.md                                                 \
	   ./singlecrystal.md                                         \
	   ./finitestrainsinglecrystal.md                             \
	   ./finitestrainsinglecrystal-huang.md                       \
	   ./phasefield.md				              \
	   ./pandoc-crossref.yaml                                     \
	   ./TODO.md						      \
	   ./BehaviourBricks.md				              \
	   ./DefaultCZMDSL-keywords.md				      \
	   ./DefaultDSL-keywords.md				      \
	   ./DefaultFiniteStrainDSL-keywords.md			      \
	   ./Implicit-keywords.md				      \
	   ./ImplicitFiniteStrain-keywords.md			      \
	   ./ImplicitII-keywords.md				      \
	   ./IsotropicMisesCreep-keywords.md			      \
	   ./IsotropicPlasticMisesFlow-keywords.md		      \
	   ./IsotropicStrainHardeningMisesCreep-keywords.md	      \
	   ./MTest-keywords.md					      \
	   ./MaterialLaw-keywords.md				      \
	   ./Model-keywords.md					      \
	   ./MultipleIsotropicMisesFlows-keywords.md		      \
	   ./mfm.md				                      \
	   ./mfront-doc.md				              \
	   ./Norton-web.md				              \
	   ./Norton-full.md				              \
	   ./physical-constants.md		                      \
	   ./RungeKutta-keywords.md				      \
	   ./coverity-scan.md                                         \
	   ./tensors.md                                               \
	   ./theory.md                                                \
	   ./robots.txt						      \
	   ./crossdomain.xml					      \
	   ./js/vendor						      \
	   ./js/vendor/modernizr-2.6.2.min.js			      \
	   ./js/vendor/jquery-1.10.2.min.js			      \
	   ./js/main.js						      \
	   ./js/slideshow.js					      \
	   ./js/MathJax.js					      \
	   ./js/plugins.js					      \
	   ./humans.txt						      \
	   ./apple-touch-icon-precomposed.png			      \
	   ./img/background.svg  				      \
	   ./img/CauchyStressComponents.png                           \
	   ./img/tutorielch12-img1.png				      \
	   ./img/VoidsGrowth.png				      \
	   ./img/FuelRod-ddif2.png				      \
	   ./img/172_5pc.png					      \
	   ./img/VoidsGrowth.xcf				      \
	   ./img/172_5pc.xcf					      \
	   ./img/arrows.png					      \
	   ./img/FuelRod-ddif2.xcf				      \
	   ./img/NortonCreepUniaxialTesting.svg                       \
	   ./img/hsnv125.xcf                                          \
	   ./img/hsnv125.png                                          \
	   ./img/LogarithmicStrainPlasticity-ssna303.svg              \
	   ./img/ImplicitDSL.svg				      \
	   ./img/AMITEX_FFTP_sig1.xcf				      \
	   ./img/AMITEX_FFTP_sig1.png				      \
	   ./img/AMITEX_FFTP_website.png			      \
	   ./img/HureCast3M2014.png			              \
	   ./img/CodeAster2015Flyer.png			              \
	   ./img/Configuration.png			              \
	   ./img/mingw-get1.png			                      \
	   ./img/mingw-get1.xcf			                      \
	   ./img/mingw-get2.png			                      \
	   ./img/mingw-get2.xcf			                      \
	   ./img/mingw-get3.png			                      \
	   ./img/mingw-get3.xcf			                      \
	   ./img/Win64.xcf			                      \
	   ./img/Win64.png			                      \
	   ./img/Interfaces.svg			                      \
	   ./img/materiaux2014.jpg		                      \
	   ./img/SalomeMeca2015.png 				      \
	   ./img/IconeCast3M_verte.png 				      \
	   ./img/IconeCast3M_bleue.png 				      \
	   ./img/IconeCast3M_jaune.png 				      \
	   ./img/poster-giens2015.svg 				      \
	   ./img/Norton.mfront  				      \
	   ./img/Norton-web.docx				      \
	   ./img/Norton-web.odt				              \
	   ./img/Norton-web.pdf				              \
	   ./img/Norton-full.docx				      \
	   ./img/Norton-full.odt				      \
	   ./img/Norton-full.pdf				      \
	   ./img/Polar_decomposition_of_F.png                         \
	   ./img/topfuel2015-poster.png				      \
	   ./img/abaqus-isotropichardening1.png			      \
	   ./img/abaqus-isotropichardening2.png			      \
	   ./img/mfront-flyer-en.svg                                  \
	   ./img/mfront-flyer-en.png                                  \
	   ./img/mfront-flyer-en-2017.svg                             \
	   ./img/mfront-flyer-en-2017.png                             \
	   ./img/mfront-flyer-fr-2017.svg                             \
	   ./img/mfront-flyer-fr-2017.png                             \
	   ./img/AbaqusFLD.png                                        \
	   ./img/AbaqusFLD.xcf                                        \
	   ./img/AbaqusFLD.pdf                                        \
	   ./img/BrittleFracturePhaseField.png                        \
	   ./img/epx.png                                              \
	   ./img/epx-bars.png                                         \
	   ./img/UnilateralMazars.svg                                 \
	   ./img/FiniteStrainTangentOperatorConvertion.svg            \
	   ./img/VeRCoRs.png                                          \
	   ./img/VisualStudioPython.png                               \
	   ./img/AbaqusRotSigTest.png                                 \
	   ./img/FissurationPastille.png                              \
	   ./img/anderson-withwithoutacceleration.svg                 \
	   ./img/freebsdlogo-1.png                                    \
	   ./img/tplot.svg                                            \
	   ./img/AccesDigiteo.png                                     \
	   ./img/IsotropicViscoplasticityAmstrongFredericKinematicHardening.svg \
	   ./img/rusinek-klepaczko.svg                                \
	   ./img/tutorial-spanish-1.png				      \
	   ./img/tutorial-spanish-2.png				      \
	   ./img/tutorial-spanish-3.png				      \
	   ./img/tutorial-spanish-4.png				      \
	   ./img/tutorial-spanish-5.png				      \
	   ./img/tutorial-spanish-6.png				      \
	   ./img/tutorial-spanish-7.png				      \
	   ./img/tutorial-spanish-8.png				      \
	   ./img/tutorial-spanish-9.png				      \
	   ./img/tutorial-spanish-10.png			      \
	   ./img/tutorial-spanish-11.png			      \
	   ./img/tutorial-spanish-12.png			      \
	   ./img/tutorial-spanish-13.png			      \
	   ./img/tutorial-spanish-14.png			      \
	   ./img/tutorial-spanish-15.png			      \
	   ./img/tutorial-spanish-16.png			      \
	   ./img/tutorial-spanish-17.png			      \
	   ./img/tutorial-spanish-18.png			      \
	   ./img/tutorial-spanish-19.png			      \
	   ./img/tutorial-spanish-20.png			      \
	   ./img/tutorial-spanish-21.png			      \
	   ./img/tutorial-spanish-22.png			      \
	   ./img/tutorial-spanish-23.png			      \
	   ./img/tutorial-spanish-24.png			      \
	   ./img/tutorial-spanish-25.png			      \
	   ./img/tutorial-spanish-26.png			      \
	   ./img/tutorial-spanish-27.png			      \
	   ./img/tutorial-spanish-28.png			      \
	   ./img/tutorial-spanish-29.png			      \
	   ./img/tutorial-spanish-30.png			      \
	   ./img/tutorial-spanish-31.png			      \
	   ./img/tutorial-spanish-32.png			      \
	   ./img/tutorial-spanish-33.png			      \
	   ./img/tutorial-spanish-34.png			      \
	   ./img/tutorial-spanish-35.png			      \
	   ./img/tutorial-spanish-36.png			      \
	   ./img/tutorial-spanish-37.png			      \
	   ./img/tutorial-spanish-38.png			      \
	   ./img/tutorial-spanish-39.png			      \
	   ./img/tutorial-spanish-40.png			      \
	   ./img/tutorial-spanish-41.png			      \
	   ./img/tutorial-spanish-42.png			      \
	   ./img/tutorial-spanish-43.png			      \
	   ./img/twitter.png			                      \
	   ./img/CalculiX_MFRONT_WSL.png	                      \
	   ./img/CalculiXBenchmarkSmallStrain.png                     \
	   ./img/AsterTotalLagrangian.png                             \
	   ./media/epx1.mp4                                           \
	   ./media/epx2.mp4                                           \
	   ./media/abaqus-explicit.mp4                                \
	   ./media/SignoriniCompression.mp4                           \
	   ./media/SignoriniStrip.mp4                                 \
	   ./media/CalculiXSheetForming-50.mp4                        \
	   ./doc/js.md						      \
	   ./doc/usage.md					      \
	   ./doc/css.md						      \
	   ./doc/misc.md					      \
	   ./doc/extend.md					      \
	   ./doc/crossdomain.md					      \
	   ./doc/faq.md						      \
	   ./doc/html.md					      \
	   ./doc/TOC.md						      \
	   ./css/normalize.css					      \
	   ./css/slideshow.css					      \
	   ./css/main.css					      \
	   ./tex/lcmd_utf8.tex                                        \
	   ./downloads/windows-install-scripts.tar.bz2                \
	   ./downloads/example-castem2014.tar.bz2                     \
	   ./downloads/patchs-Cast3M-2014.tar.bz2                     \
	   ./downloads/patchs-Cast3M-2015.tar.bz2                     \
	   ./downloads/example-zset8.5.tar.bz2                        \
	   ./downloads/patchs-CalculiX-2.12.tar.bz2
