EXTRA_DIST=CMakeLists.txt					      \
	   ./README.md						      \
	   ./CHANGELOG.md					      \
	   ./favicon.ico					      \
	   ./404.html						      \
	   ./bibliography.bib					      \
	   ./svn.md					              \
	   ./faq.md					              \
	   ./interfaces.md					      \
	   ./devel.md					              \
	   ./index.md					              \
	   ./material-properties.md				      \
	   ./behaviours.md				              \
	   ./implicit-dsl.md				              \
	   ./models.md				                      \
	   ./castem.md						      \
	   ./castem-fr.md					      \
	   ./epx.md						      \
	   ./aster.md						      \
	   ./abaqus.md						      \
	   ./ansys.md						      \
	   ./calculix.md					      \
	   ./cyrano.md					      \
	   ./zmat.md						      \
	   ./getting-started.md					      \
	   ./install.md						      \
	   ./install-freebsd.md					      \
	   ./install-windows-msys.md				      \
	   ./install-windows-Cast3M2017.md			      \
	   ./install-windows-VisualStudio.md			      \
	   ./packages.md					      \
	   ./about.md						      \
	   ./news.md						      \
	   ./mfront-template.html				      \
	   ./benchmark.md					      \
	   ./documentations.md					      \
	   ./gallery.md					              \
	   ./mfront-python.md					      \
	   ./math.md					              \
	   ./material.md					      \
	   ./mtest.md						      \
	   ./mtest-python.md					      \
	   ./tutorial.md					      \
	   ./tutorial-spanish.md				      \
	   ./tfel-python.md					      \
	   ./LICENSE.md						      \
	   ./glossary.md					      \
	   ./parameters.md					      \
	   ./publications.md					      \
	   ./CONTRIBUTING.md					      \
	   ./release-notes.md					      \
	   ./release-notes-2.0.5.md				      \
	   ./release-notes-3.0.md				      \
	   ./release-notes-3.0.1.md				      \
	   ./release-notes-3.0.2.md				      \
	   ./release-notes-3.0.3.md				      \
	   ./release-notes-3.0.4.md				      \
	   ./release-notes-3.0.5.md				      \
	   ./release-notes-3.1.md				      \
	   ./release-notes-3.1.1.md				      \
	   ./release-notes-3.1.2.md				      \
	   ./release-notes-3.1.3.md				      \
	   ./release-notes-3.1.4.md				      \
	   ./release-notes-3.1.5.md				      \
	   ./release-notes-3.2.md				      \
	   ./release-notes-3.2.1.md				      \
	   ./release-notes-3.2.2.md				      \
	   ./release-notes-3.3.md				      \
	   ./hyperelasticity.md				              \
	   ./search.md				              \
	   ./signorini.md				              \
	   ./ogden.md				                      \
	   ./hyperviscoelasticity.md				      \
	   ./IsotropicLinearHardeningPlasticity.md                    \
	   ./orthotropiclinearhardeningplasticity.md                  \
	   ./isotropicplasticityamstrongfrederickinematichardening.md \
	   ./iwan.md                                                  \
	   ./drucker.md                                               \
	   ./drucker-prager-cap.md                                    \
	   ./hosford.md                                               \
	   ./barlat-yld2004.md                                        \
	   ./greenplasticity.md                                       \
	   ./singlecrystal.md                                         \
	   ./finitestrainsinglecrystal.md                             \
	   ./finitestrainsinglecrystal-huang.md                       \
	   ./generic-behaviours-interface.md                          \
	   ./phasefield.md				                          \
	   ./pandoc-crossref.yaml                                     \
	   ./TODO.md						                          \
	   ./BehaviourBricks.md				                      \
	   ./DDIF2Brick.md                                            \
	   ./StandardElastoViscoPlasticityBrick.md				     \
	   ./HookeStressPotential.md				     \
	   ./DDIF2StressPotential.md				     \
	   ./DefaultCZMDSL-keywords.md				      \
	   ./DefaultDSL-keywords.md				      \
	   ./DefaultFiniteStrainDSL-keywords.md			      \
	   ./Implicit-keywords.md				      \
	   ./ImplicitFiniteStrain-keywords.md			      \
	   ./ImplicitII-keywords.md				      \
	   ./IsotropicMisesCreep-keywords.md			      \
	   ./IsotropicPlasticMisesFlow-keywords.md		      \
	   ./IsotropicStrainHardeningMisesCreep-keywords.md	      \
	   ./MTest-keywords.md					      \
	   ./MaterialLaw-keywords.md				      \
	   ./Model-keywords.md					      \
	   ./MultipleIsotropicMisesFlows-keywords.md		      \
	   ./mfm.md				                      \
	   ./mfm-test-generator.md				            \
	   ./mfront-doc.md				              \
	   ./Norton-web.md				              \
	   ./Norton-full.md				              \
	   ./physical-constants.md		                      \
	   ./RungeKutta-keywords.md				      \
	   ./coverity-scan.md                                         \
	   ./tensors.md                                               \
	   ./sovs.md                                                  \
	   ./unicode.md                                               \
	   ./RambergOsgoodNonLinearElasticity.md                      \
	   ./MohrCoulomb.md                                           \
	   ./theory.md                                                \
	   ./robots.txt						      \
	   ./crossdomain.xml					      \
	   ./js/vendor						      \
	   ./js/vendor/modernizr-2.6.2.min.js			      \
	   ./js/vendor/jquery-1.10.2.min.js			      \
	   ./js/main.js						      \
	   ./js/slideshow.js					      \
	   ./js/MathJax.js					      \
	   ./js/plugins.js					      \
	   ./humans.txt						      \
	   ./apple-touch-icon-precomposed.png			      \
	   ./img/AbdominalMusclesModelling2019.png		      \
	   ./img/background.svg  				      \
	   ./img/CauchyStressComponents.png                           \
	   ./img/tutorielch12-img1.png				      \
	   ./img/VoidsGrowth.png				      \
	   ./img/FuelRod-ddif2.png				      \
	   ./img/172_5pc.png					      \
	   ./img/VoidsGrowth.xcf				      \
	   ./img/172_5pc.xcf					      \
	   ./img/arrows.png					      \
	   ./img/FuelRod-ddif2.xcf				      \
	   ./img/NortonCreepUniaxialTesting.svg                       \
	   ./img/hsnv125.xcf                                          \
	   ./img/hsnv125.png                                          \
	   ./img/LogarithmicStrainPlasticity-ssna303.svg              \
	   ./img/ImplicitDSL.svg				      \
	   ./img/AMITEX_FFTP_sig1.xcf				      \
	   ./img/AMITEX_FFTP_sig1.png				      \
	   ./img/AMITEX_FFTP_website.png			      \
	   ./img/HureCast3M2014.png			              \
	   ./img/CodeAster2015Flyer.png			              \
	   ./img/Configuration.png			              \
	   ./img/mingw-get1.png			                      \
	   ./img/mingw-get1.xcf			                      \
	   ./img/mingw-get2.png			                      \
	   ./img/mingw-get2.xcf			                      \
	   ./img/mingw-get3.png			                      \
	   ./img/mingw-get3.xcf			                      \
	   ./img/Win64.xcf			                      \
	   ./img/Win64.png			                      \
	   ./img/Interfaces.svg			                      \
	   ./img/materiaux2014.jpg		                      \
	   ./img/SalomeMeca2015.png 				      \
	   ./img/IconeCast3M_verte.png 				      \
	   ./img/IconeCast3M_bleue.png 				      \
	   ./img/IconeCast3M_jaune.png 				      \
	   ./img/IconeCast3M_turquoise.png 				      \
	   ./img/poster-giens2015.svg 				      \
	   ./img/Norton.mfront  				      \
	   ./img/Norton-web.docx				      \
	   ./img/Norton-web.odt				              \
	   ./img/Norton-web.pdf				              \
	   ./img/Norton-full.docx				      \
	   ./img/Norton-full.odt				      \
	   ./img/Norton-full.pdf				      \
	   ./img/Polar_decomposition_of_F.png                         \
	   ./img/topfuel2015-poster.png				      \
	   ./img/abaqus-isotropichardening1.png			      \
	   ./img/abaqus-isotropichardening2.png			      \
	   ./img/mfront-flyer-en.svg                                  \
	   ./img/mfront-flyer-en.png                                  \
	   ./img/mfront-flyer-en-2017.svg                             \
	   ./img/mfront-flyer-en-2017.png                             \
	   ./img/mfront-flyer-fr-2017.svg                             \
	   ./img/mfront-flyer-fr-2017.png                             \
	   ./img/AbaqusFLD.png                                        \
	   ./img/AbaqusFLD.xcf                                        \
	   ./img/AbaqusFLD.pdf                                        \
	   ./img/BrittleFracturePhaseField.png                        \
	   ./img/epx.png                                              \
	   ./img/epx-bars.png                                         \
	   ./img/UnilateralMazars.svg                                 \
	   ./img/FiniteStrainTangentOperatorConvertion.svg            \
	   ./img/VeRCoRs.png                                          \
	   ./img/VisualStudioPython.png                               \
	   ./img/AbaqusRotSigTest.png                                 \
	   ./img/FissurationPastille.png                              \
	   ./img/anderson-withwithoutacceleration.svg                 \
	   ./img/freebsdlogo-1.png                                    \
	   ./img/FreeBSD.jpg                                          \
	   ./img/TrueOS.jpg                                           \
	   ./img/tplot.svg                                            \
	   ./img/AccesDigiteo.png                                     \
	   ./img/IsotropicViscoplasticityAmstrongFredericKinematicHardening.svg \
	   ./img/rusinek-klepaczko.svg                                \
	   ./img/tutorial-spanish-1.png				      \
	   ./img/tutorial-spanish-2.png				      \
	   ./img/tutorial-spanish-3.png				      \
	   ./img/tutorial-spanish-4.png				      \
	   ./img/tutorial-spanish-5.png				      \
	   ./img/tutorial-spanish-6.png				      \
	   ./img/tutorial-spanish-7.png				      \
	   ./img/tutorial-spanish-8.png				      \
	   ./img/tutorial-spanish-9.png				      \
	   ./img/tutorial-spanish-10.png			      \
	   ./img/tutorial-spanish-11.png			      \
	   ./img/tutorial-spanish-12.png			      \
	   ./img/tutorial-spanish-13.png			      \
	   ./img/tutorial-spanish-14.png			      \
	   ./img/tutorial-spanish-15.png			      \
	   ./img/tutorial-spanish-16.png			      \
	   ./img/tutorial-spanish-17.png			      \
	   ./img/tutorial-spanish-18.png			      \
	   ./img/tutorial-spanish-19.png			      \
	   ./img/tutorial-spanish-20.png			      \
	   ./img/tutorial-spanish-21.png			      \
	   ./img/tutorial-spanish-22.png			      \
	   ./img/tutorial-spanish-23.png			      \
	   ./img/tutorial-spanish-24.png			      \
	   ./img/tutorial-spanish-25.png			      \
	   ./img/tutorial-spanish-26.png			      \
	   ./img/tutorial-spanish-27.png			      \
	   ./img/tutorial-spanish-28.png			      \
	   ./img/tutorial-spanish-29.png			      \
	   ./img/tutorial-spanish-30.png			      \
	   ./img/tutorial-spanish-31.png			      \
	   ./img/tutorial-spanish-32.png			      \
	   ./img/tutorial-spanish-33.png			      \
	   ./img/tutorial-spanish-34.png			      \
	   ./img/tutorial-spanish-35.png			      \
	   ./img/tutorial-spanish-36.png			      \
	   ./img/tutorial-spanish-37.png			      \
	   ./img/tutorial-spanish-38.png			      \
	   ./img/tutorial-spanish-39.png			      \
	   ./img/tutorial-spanish-40.png			      \
	   ./img/tutorial-spanish-41.png			      \
	   ./img/tutorial-spanish-42.png			      \
	   ./img/tutorial-spanish-43.png			      \
	   ./img/twitter.png			                      \
	   ./img/CalculiX_MFRONT_WSL.png	                      \
	   ./img/CalculiXBenchmarkSmallStrain.png                     \
	   ./img/AsterTotalLagrangian.png                             \
	   ./img/HosfordStress.png                                    \
	   ./img/HosfordStress.svg                                    \
	   ./img/GreenYieldCriterion.svg                              \
	   ./img/GreenYieldCriterion.png                              \
	   ./img/IsotropicEquivalentStressesInPiPlane.svg             \
           ./img/TFEL-3.1/Alpine_Linux_3.6.png			      \
           ./img/TFEL-3.1/Fedora_27_05_12_2017_11_37_17.png	      \
           ./img/TFEL-3.1/Ghost_BSD-10.3.png			      \
           ./img/TFEL-3.1/TrueOs-07-2017_05_12_2017_08_01_39.png      \
           ./img/TFEL-3.1/Cygwin.png				      \
           ./img/TFEL-3.1/MINGW-Cast3M2017.png			      \
           ./img/TFEL-3.1/VisualStudio-2015.png			      \
           ./img/TFEL-3.1/OpenSolaris-2017.png			      \
           ./img/TFEL-3.1/Haiku-51366.png			      \
           ./img/Scherzinger/Hosford100/Newton.png		      \
           ./img/Scherzinger/Hosford100/LevenbergMarquardt.png	      \
           ./img/Scherzinger/Hosford100/NewtonJacobi.png	      \
           ./img/Scherzinger/Hosford100/LevenbergMarquardtJacobi.png  \
           ./img/Scherzinger/Hosford100/MaximumIncrementValuePerIteration.png \
           ./img/Scherzinger/Hosford100/MaximumIncrementValuePerIterationJacobi.png \
           ./img/Scherzinger/Hosford100/TestOnYieldStress.png         \
           ./img/Scherzinger/Hosford6/TestOnYieldStress.png	      \
           ./img/Scherzinger/Hosford6/Newton.png		      \
           ./img/Scherzinger/Hosford8/TestOnYieldStress.png	      \
           ./img/Scherzinger/Hosford8/Newton.png		      \
           ./img/Scherzinger/Hosford8/NewtonJacobi.png		      \
           ./img/pipe.svg					      \
           ./img/plate.svg					      \
           ./img/LoadInducedThermalStrain_Torelli2018.png         \
           ./img/JUSM18_RDEGEILH_Fissuration_culasses.png         \
           ./img/Barrioz2018.png                                  \
	   ./img/Cazacu2001_2090-T3.svg                               \
	   ./img/Cazacu2001_2090-T9.svg                               \
	   ./img/Cazacu2001_6016-T4-YdLin.svg                         \
	   ./img/Cazacu2004.svg                                       \
	   ./img/StressPotentials.svg                                 \
	   ./img/CyranoPrinciple.png                                  \
	   ./img/DruckerPragerCap.svg                                 \
	   ./img/mfront-unicode.png                                   \
	   ./img/PSACylinderHeadDesign.png			      \
	   ./img/PSACylinderHeadDesign.svg			      \
	   ./img/PSACylinderHeadDesign.xcf			      \
	   ./img/MohrCoulombAnalitical.svg                            \
	   ./img/MohrCoulombPiPlane.svg                               \
	   ./img/MohrCoulombSmoothing.svg                             \
	   ./img/XperMFront.xcf			                      \
	   ./img/XperMFront.png			                          \
	   ./img/RambergOsgoodNonLinearElasticity-UniaxialTensileTest.png \
	   ./media/epx1.mp4                                               \
	   ./media/epx2.mp4                                           \
	   ./media/abaqus-explicit.mp4                                \
	   ./media/SignoriniCompression.mp4                           \
	   ./media/SignoriniStrip.mp4                                 \
	   ./media/CalculiXSheetForming-50.mp4                        \
	   ./media/DeepDrawing.mp4                                    \
	   ./doc/js.md						      \
	   ./doc/usage.md					      \
	   ./doc/css.md						      \
	   ./doc/misc.md					      \
	   ./doc/extend.md					      \
	   ./doc/crossdomain.md					      \
	   ./doc/faq.md						      \
	   ./doc/html.md					      \
	   ./doc/TOC.md						      \
	   ./css/normalize.css					      \
	   ./css/slideshow.css					      \
	   ./css/main.css					      \
	   ./tex/lcmd_utf8.tex                                        \
	   ./downloads/windows-install-scripts.tar.bz2                \
	   ./downloads/example-castem2014.tar.bz2                     \
	   ./downloads/patchs-Cast3M-2014.tar.bz2                     \
	   ./downloads/patchs-Cast3M-2015.tar.bz2                     \
	   ./downloads/example-zset8.5.tar.bz2                        \
	   ./downloads/patchs-CalculiX-2.12.tar.bz2
